added authentication mechanism

--- a/basic_auth_project/templates/index.html
+++ b/basic_auth_project/templates/index.html
@@ -13,6 +13,11 @@
   <body>
     <h1>This is HOME page</h1>
 
+    <p>
+        Mr./Mrs. <strong>{{user.username}}</strong>  Welcome to our website.<br/>
+        You can <a href="/logout">Logout</a> anytime.
+    </p>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
